customization/darim-custom/kustomize/010-jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb-udp
  namespace: jitsi-darim
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 30100
      protocol: UDP
      targetPort: 30100
      nodePort: 30100
  selector:
    k8s-app: jitsi
