customization/darim-custom/kustomize/040-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  namespace: jitsi-darim
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
    - name: "https"
      port: 443
      targetPort: 443
  selector:
    k8s-app: jitsi
